# MasterThesis_Work

./: .gitignore  README.md
figures/: distance_matrix.nb  distance_matrix.wls  distance_matrix_500.wls  dump-viewer.nb  hamiltonian_flow_2.nb  recurrencematrix_plots_creator.nb  visualizer_discreterecurrences_60000_1_200_10000.nb  visualizer_fieldrecurrences_60000_1_200_10000.nb
figures/hamiltonian_flow/: hamiltonian_flow_1.nb
figures/testing/: testing_1.m
meetings/02.08/: agenda.txt
meetings/05.06/: agenda.txt
meetings/17.04/: agenda.txt
meetings/22.05/: todo.txt
programming/field_recurrences/cpp/: CMakeLists.txt  field_distance_matrix.cpp  field_recurrences_copy.cpp  field_recurrences_work.cpp  particle_io.hpp  pbs-job-mpi.sh
programming/field_recurrences/mathematica/: field_recurrences.m
programming/hungarian_algorithm/include/: hungarian_algorithm_core.hpp
programs/field_distance_matrix/: CMakeLists.txt  MakeRun.sh  field_distance_matrix.cpp
programs/general/: general.hpp
programs/hungarian_algorithm/src/: hungarian_algorithm_core.cpp
programs/includes/: general_util.hpp  io_util.hpp
programs/particle_io/: particle_io.hpp
programs/recurrence_quantitative_analysis/recurrence_quantitative_analysis/: recurrence_quantitative_analysis.hpp
programs/recurrence_quantitative_analysis/recurrence_rate/: recurrence_rate.cpp
programs/result_io/: resultio.cpp
programs/src/discrete_distance_matrix/: CMakeLists.txt  Run.sh  discrete_distance_matrix.cpp  job_submit.sh
programs/src/field_distance_matrix/: CMakeLists.txt  MakeRun.sh  Run.sh  field_distance_matrix.cpp  job_submit.sh
programs/src/field_distance_matrix/pbs/: pbs_error.txt  pbs_output.txt
programs/src/hungarian_algorithm/: ha_core.hpp  ha_cost.hpp  ha_costobject.hpp  ha_distance.hpp
programs/src/hungarian_algorithm_benchmark/: CMakeLists.txt  Run.sh  hungarian_algorithm_benchmark.cpp
programs/src/recurrence_quantitative_analysis/determinism/: CMake.sh  CMakeLists.txt  MakeRun.sh  determinism.cpp
programs/src/recurrence_quantitative_analysis/laminarity/: CMakeLists.txt  MakeRun.sh  laminarity.cpp
programs/src/recurrence_quantitative_analysis/mathematica/: distance_statistics.nb  rqa.nb
programs/src/recurrence_quantitative_analysis/recurrence_rate/: CMakeLists.txt  MakeRun.sh  recurrence_rate.cpp
programs/src/recurrence_quantitative_analysis/rqa_core/: rqa_core.hpp
programs/src/recurrence_quantitative_analysis/rqa_util/: rqa_util.hpp
results/field_distance_matrix/Liggghts/N_60000_U_1.333_1_100_12000_8_8_8/: field_distance_matrix.txt
results/field_distance_matrix/Liggghts/N_60000_U_1.333_1_10_12000_8_8_8/: field_distance_matrix.txt
results/field_distance_matrix/Liggghts/N_60000_U_1.333_1_500_2000_8_8_8/: field_distance_matrix.txt
results/field_distance_matrix/Liggghts/N_60000_U_1.333_1_50_2000_8_8_8/: field_distance_matrix.txt
results/field_distance_matrix/Liggghts/N_60000_U_1.333_1_5_2000_8_8_8/: field_distance_matrix.txt
results/hungarian_algorithm_benchmark/: timing_adjmat.txt  timing_full_1.txt  timing_full_2.txt  timing_full_3.txt  timing_full_4.txt  timing_full_5.txt
results/recurrence_quantitative_analysis/determinism/Liggghts/N_60000_U_1.333_1_5_2000_8_8_8/: determinism_10.txt  determinism_20.txt
results/recurrence_quantitative_analysis/laminarity/Liggghts/N_60000_U_1.333_1_5_2000_8_8_8/: laminarity_20.txt
results/recurrence_quantitative_analysis/recurrence_rate/Liggghts/N_60000_U_1.333_1_5_2000_8_8_8/: recurrence_rates_10.txt  recurrence_rates_20.txt
results/todo/: comp_60000_1_200_10000.nb  recurrence_statistics.nb
tests/ha_core/: CMakeLists.txt  Run.sh  ha_core_test.cpp
tests/ha_cost/: CMakeLists.txt  Run.sh  ha_cost_test.cpp
tests/ha_costobject/: CMakeLists.txt  Run.sh
tests/ha_distance/: ha_costobject_test.cpp
